make script to run tests with better coverage
[ci skip]

--- a/.coveragerc
+++ b/.coveragerc
@@ -26,5 +26,9 @@ exclude_lines =
 
 ignore_errors = True
 
+## seem to be missed if not on cmd line
+show-missing = True
+omit = *env*,*/tests/*,setup.py
+
 [html]
 directory = coverage_html_report
