--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ env:
 install:
   - pip install -e .
 before_script:
-script: nosetests  --nologcapture --nocapture --with-coverage --cover-package=lumin --cover-erase --exclude=selenium
+script: nosetests lumin --with-coverage --cover-erase --cover-package=lumin --cover-erase
 notifications:
   irc: "irc.freenode.org#koansys"
