--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: python
 python:
   - "2.7"
+  - "3.2"
   - "3.3"
 env:
   - TEST_MONGODB=localhost
 install:
   - pip install -e .
 before_script:
-script: nosetests lumin --with-coverage --cover-erase --cover-package=lumin --cover-erase
+script: nosetests lumin lumin/tests/functional --with-coverage --cover-erase --cover-package=lumin --cover-erase
 notifications:
   irc: "irc.freenode.org#koansys"
