seriously last try tonight.
Dunno why suddenly py3 tests are failing on TCI when they work locally

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 install:
   - pip install -e .
 before_script:
-script: nosetests lumin lumin/tests/functional --with-coverage --cover-erase --cover-package=lumin --cover-erase
+script: nosetests lumin --with-coverage --cover-erase --cover-package=lumin --cover-erase
 notifications:
   irc: "irc.freenode.org#koansys"
 services: mongodb
